# opml

./: .gitignore  Cargo.toml  LICENSE-MIT  License-MIT  Makefile.toml  README.md  ReadMe.md  flake.nix  rustup-toolchain.toml  shell.nix
examples/: rss.rs
opml_api/: Cargo.toml  LICENSE-MIT
opml_api/examples/: rss.rs
opml_api/examples/opml_samples/: rust_feeds.opml
opml_api/source/: lib.rs
opml_api/tests/: construction.rs  deprecated.rs  errors.rs  spec_samples.rs  valid.rs
opml_api/tests/samples/: construction_1.opml  empty_docs.opml  invalid_opml_no_outlines.opml  invalid_opml_version_1_0.opml
opml_api/tests/spec_samples/: subscriptionList.opml
opml_cli/: Cargo.toml  LICENSE-MIT
opml_cli/source/: main.rs
opml_cli/tests/: cli.rs  invalid.rs  valid.rs
opml_cli/tests/samples/: youtube.opml
opml_cli/tests/snapshots/: cli__json.snap  cli__json_pretty.snap  cli__missing_file.snap  cli__missing_format.snap  cli__multiple_formats.snap  cli__rss.snap  json-pretty.json  json.json  missing-file.txt  missing-format.txt  rss.txt
source/: lib.rs
tests/: construction.rs  errors.rs  valid.rs
tests/samples/: construction_2.opml  invalid_opml_version.opml  invalid_opml_version_1_1.opml  invalid_xml.opml  minimum_valid_opml.opml  valid_opml_1_0.opml  valid_opml_with_everything.opml
tests/spec_samples/: License
