# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml"
description = "An OPML parser for Rust."
authors = ["Holllo <helllo@holllo.cc>"]
version = "1.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Holllo/opml"
readme = "../README.md"
edition = "2018"
keywords = ["xml", "opml"]

[lib]
path = "source/lib.rs"

[dependencies]
strong-xml = "0.6.3"
thiserror = "1.0.29"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
