# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml"
description = "An OPML parser for Rust."
authors = ["Holllo <helllo@holllo.cc>"]
version = "1.1.4"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Holllo/opml"
readme = "../README.md"
edition = "2021"
keywords = ["xml", "opml"]

[lib]
path = "source/lib.rs"

[dependencies]
hard-xml = "1.13.0"
thiserror = "1.0.37"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]
