# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml"
description = "OPML library for Rust."
repository = "https://git.bauke.xyz/Holllo/opml"
license = "MIT OR Apache-2.0"
version = "1.1.5"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"
readme = "../README.md"
keywords = ["xml", "opml"]

[lib]
path = "source/lib.rs"

[dependencies]
hard-xml = "1.13.0"
thiserror = "1.0.37"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]
