# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml_cli"
description = "OPML for the command-line."
version = "1.1.4"
authors = ["Holllo <helllo@holllo.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Holllo/opml"
readme = "../README.md"
edition = "2021"
keywords = ["xml", "opml"]

[[bin]]
name = "opml"
path = "source/main.rs"

[dependencies]
serde_json = "1.0.85"

[dependencies.clap]
version = "4.0.7"
features = ["derive"]

[dependencies.opml]
path = "../opml_api"
version = "1.1.4"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
