# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml_cli"
description = "OPML for the command-line."
repository = "https://git.bauke.xyz/Holllo/opml"
license = "MIT OR Apache-2.0"
version = "1.1.4"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"
readme = "../README.md"
keywords = ["xml", "opml"]

[[bin]]
name = "opml"
path = "source/main.rs"

[dependencies]
serde_json = "1.0.85"

[dependencies.clap]
version = "4.0.7"
features = ["derive"]

[dependencies.opml]
path = "../opml_api"
version = "1.1.4"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
insta = "1.21.0"
test-case = "2.2.1"
