# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "opml_cli"
description = "OPML for the command-line."
repository = "https://git.bauke.xyz/Holllo/opml"
license = "MIT OR Apache-2.0"
version = "1.1.6"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"
readme = "../README.md"
keywords = ["xml", "opml"]

[[bin]]
name = "opml"
path = "source/main.rs"

[dependencies]
serde_json = "1.0.111"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.opml]
path = "../opml_api"
version = "1.1.5"

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.13"
insta = "1.34.0"
test-case = "3.3.1"
